Clicking input type=range with padding or border sets wrong value https://bugs.webkit.org/show_bug.cgi?id=94473

Reviewed by Kent Tamura.

Source/WebCore:

We should take the padding and border width into account when calculating the value from the mouse location.

Test: fast/forms/range/range-hit-test-with-padding.html

* html/shadow/SliderThumbElement.cpp:
(WebCore::sliderTrackElementOf):
(WebCore):
(WebCore::SliderThumbElement::setPositionFromPoint):
* html/shadow/SliderThumbElement.h:
(WebCore):

LayoutTests:

* fast/forms/range/range-hit-test-with-padding-expected.txt: Added.
* fast/forms/range/range-hit-test-with-padding.html: Added.


Canonical link: https://commits.webkit.org/112369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126132 268f45cc-cd09-0410-ab3c-d52691b4dbfc